# robustlink

./: .gitattributes  .gitignore  LICENSE  README.md  enhancer_gene_utils.py  env.yml  env_lite3.yml  env_lite3_after.yml  env_long.yml  env_noversion.yml  link_atac_rna.sh  link_mc_rna.sh  pyproject.toml  run_pipe_atac_lite.sh  run_pipe_mc_lite.sh  setup.py  visualize_correlation.ipynb  visualize_links.ipynb
archive/: 00.clean_up_data-Copy1.ipynb  00.clean_up_data-Copy2.ipynb  00.clean_up_data.ipynb  SCF_main.py  SCF_main_repeat_subsampling_bck.py  SCF_main_repeat_subsampling_within_cluster_knn.py  cli_parser.py  env_lite.yml  env_lite2.yml  env_lite3.yml  foo.py  installed.yml  run_pipe_mc_lite.sh  setup copy.py  setup.py
archive/demo/: correlate_metacells_atac_rna.py  correlate_metacells_mc_rna.py  run_pipe_mc_lite.sh  visualize_correlation.ipynb
demo/: __init__jupyterlab.py  generate_metacells_rna.py  link_atac_rna.sh  link_mc_rna.sh  log  run_pipe_atac.sh  run_pipe_mc.sh  visualize_correlation.ipynb  visualize_links.ipynb
demo/.ipynb_checkpoints/: 00.run_pipe_atac_alldata_dec21-checkpoint.sh  00.run_pipe_mc_alldata_dec21-checkpoint.sh  visualize_correlation-checkpoint.ipynb
demo/configs/: config_mop_rna_atac_ka30_knn30_211115.py  config_mop_rna_mc_ka30_knn30_211115.py  config_template_rna_atac_ka_knn.py
demo/old/: run_pipe_atac.sh
doc/: README_demodata-Copy.txt
robustlink/: __main__.py  analysis.py  cli_parser.py  correlate_metacells_atac_rna.py  correlate_metacells_mc_rna.py  enhancer_gene_utils.py  generate_metacells_rna.py  utils.py
(+13 files in other folders)
